--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://wiki.grindosonic.com/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'GrindoSonic IET Knowledge Base'
